[package]
name = "riptide-cli"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for RipTide web crawler and content extraction"

[lib]
name = "riptide_cli"
path = "src/lib.rs"

[[bin]]
name = "riptide"
path = "src/main.rs"

[dependencies]
# Core (6 dependencies)
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# HTTP (2 dependencies)
reqwest.workspace = true
url.workspace = true

# CLI utilities (5 dependencies)
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"
dirs = "5.0"
ctrlc = "3.4"

# Config (2 dependencies)
env_logger.workspace = true
chrono.workspace = true

# Logging and telemetry
tracing.workspace = true
opentelemetry.workspace = true

# Async utilities
futures.workspace = true
async-trait.workspace = true

# Utilities
once_cell.workspace = true
rand.workspace = true
urlencoding = "2.1"
uuid.workspace = true

# Internal riptide crates
riptide-reliability = { path = "../riptide-reliability" }
riptide-stealth = { path = "../riptide-stealth" }
riptide-browser = { path = "../riptide-browser" }
riptide-monitoring = { path = "../riptide-monitoring" }
riptide-workers = { path = "../riptide-workers" }
riptide-extraction = { path = "../riptide-extraction" }

# Optional browser feature
chromiumoxide = { version = "0.7", optional = true }

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"

[features]
default = []
browser = ["chromiumoxide"]
wasm-extractor = []
