[package]
name = "riptide-cli"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for RipTide web crawler and content extraction"

[lib]
name = "riptide_cli"
path = "src/lib.rs"

[[bin]]
name = "riptide"
path = "src/main.rs"

[dependencies]
# ===== THIN CLI - ONLY 15 CORE DEPENDENCIES =====
# Business logic belongs in API server, NOT in CLI
# See: /docs/CLI-REFACTORING-PLAN.md Phase 1

# Core (6 dependencies)
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# HTTP Client (2 dependencies)
reqwest.workspace = true
url.workspace = true

# CLI Utilities (6 dependencies)
colored = "2.1"
indicatif = "0.17"
comfy-table = "7.1"
dirs = "5.0"
ctrlc = "3.4"
base64 = "0.21"

# Async utilities (for streaming support - 2 dependencies)
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Config & Logging (2 dependencies)
env_logger.workspace = true
chrono.workspace = true

# Error Handling
thiserror = "1.0"

# ===== REMOVED - Business logic now in API server =====
# Previously removed in commit a1cac80, mistakenly re-added in 13035be
# Removing again for Phase 1 thin CLI:
#
# riptide-extraction    # Content extraction → API server
# riptide-browser       # Browser automation → API server
# riptide-pdf           # PDF processing → API server
# riptide-workers       # Job processing → API server
# riptide-cache         # Cache management → API server
# riptide-reliability   # Retry/circuit breaker → API server
# riptide-stealth       # Anti-detection → API server
# riptide-monitoring    # Metrics collection → API server
#
# tracing, opentelemetry  # Heavy telemetry → not needed in thin CLI
# futures, async-trait    # Not needed for simple HTTP calls
# once_cell, rand, uuid   # Utility bloat
# chromiumoxide           # Browser automation → API server

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "3.0"
