[package]
name = "riptide-config"
version = "2.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
riptide-types = { path = "../riptide-types" }

# External dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
