[package]
name = "riptide-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
psutil = { workspace = true }
url = { workspace = true }
lol_html = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-bindgen = "0.30"
uuid = { workspace = true }
pdfium-render = { workspace = true, optional = true }
rand = "0.8"
robotstxt = "0.2"
dashmap = "6.0"
sha2 = "0.10"
xml = "0.8"
libc = "0.2"

# Strategy and chunking dependencies
schemars = { version = "0.8", features = ["chrono"] }
scraper = "0.18"
tiktoken-rs = "0.5"
unicode-segmentation = "1.10"

# Performance optimization dependencies
criterion = { version = "0.5", optional = true }
geohash = { version = "0.13", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
wasmtime = { version = "26", features = ["component-model"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["pdf"]
pdf = ["pdfium-render"]
benchmarks = ["criterion", "geohash"]
api-integration = []

[[bench]]
name = "performance_benches"
harness = false
required-features = ["benchmarks"]