[package]
name = "riptide-core"
version = "0.1.0"
edition = "2021"

[dependencies]
riptide-search = { path = "../riptide-search" }
riptide-stealth = { path = "../riptide-stealth" }
riptide-pdf = { path = "../riptide-pdf", optional = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
hex = "0.4"
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
regex = { workspace = true }
sysinfo = { workspace = true }
psutil = { workspace = true }
url = { workspace = true }
lol_html = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wit-bindgen = "0.30"
uuid = { workspace = true }
rand = "0.8"
robotstxt = "0.2"
dashmap = { workspace = true }
sha2 = "0.10"
xml = "0.8"
libc = "0.2"

# Strategy and chunking dependencies
schemars = { version = "0.8", features = ["chrono"] }
scraper = { workspace = true }
tiktoken-rs = "0.5"
unicode-segmentation = "1.10"

# Performance optimization dependencies
criterion = { version = "0.5", optional = true }
geohash = { version = "0.13", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.8"
wasmtime = { version = "26", features = ["component-model"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["pdf", "stealth"]
pdf = ["riptide-pdf/pdf"]
stealth = ["riptide-stealth/stealth"]
full-stealth = ["riptide-stealth/full-stealth"]
benchmarks = ["criterion", "geohash"]
api-integration = ["pdf", "stealth"]

[[bench]]
name = "performance_benches"
harness = false
required-features = ["benchmarks"]