[package]
name = "riptide-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# DEPRECATED: This crate is now a compatibility wrapper.
# All functionality has been moved to riptide-browser.
# Use riptide-browser directly for new code.
riptide-browser = { path = "../riptide-browser", features = ["headless"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
serial_test = "3.2.0"

[features]
default = []
headless = ["riptide-browser/headless"]
