[package]
name = "riptide-extraction"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTML processing and extraction capabilities for riptide-extraction"
keywords = ["html", "extraction", "css", "regex", "dom"]
categories = ["text-processing", "web-programming"]

[dependencies]
# Shared types to break circular dependency
riptide-types = { path = "../riptide-types" }
# Spider types for strategy traits - OPTIONAL (DISABLED BY DEFAULT)
# WARNING: Creates circular dependency: extraction → spider → reliability → pool → extraction
# DO NOT enable unless circular dependency is resolved
# Only enable with "spider" feature when needed for SpiderStrategy trait
# Current status: spider_implementations.rs is disabled, no crates use this feature
riptide-spider = { path = "../riptide-spider", optional = true }
# Core dependencies removed to avoid circular dependency
# riptide-core = { path = "../riptide-core" }
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true

# HTML processing
scraper = "0.20"
lol_html.workspace = true
regex.workspace = true
url.workspace = true

# Chunking dependencies
tiktoken-rs = "0.5"
uuid = { version = "1.0", features = ["v4"] }
dashmap = { workspace = true }
parking_lot = "0.12"

# Optional features
futures.workspace = true

# WASM extraction dependencies (OPTIONAL - Phase 1)
# Only compiled when wasm-extractor feature is enabled
wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

# Table extraction dependencies
chrono = { workspace = true, features = ["serde"] }
schemars = { workspace = true }
csv = "1.3"
reqwest = { workspace = true, features = ["json"] }

# Schema extraction dependencies (needed for metadata timestamps)
# chrono already included above

[build-dependencies]
wit-bindgen = "0.16"

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
# P2-F1 Day 6: riptide-core eliminated - functionality distributed to specialized crates
futures.workspace = true
criterion = { workspace = true }

[features]
default = ["css-extraction", "regex-extraction", "dom-utils", "chunking", "native-parser"]
css-extraction = []
regex-extraction = []
dom-utils = []
table-extraction = []
chunking = []

# Spider integration feature (OPTIONAL - NOT RECOMMENDED)
# WARNING: Creates circular dependency and is currently non-functional
# - Enables SpiderStrategy trait from riptide-spider crate
# - spider_implementations.rs is disabled due to missing dependencies
# - No crates in the codebase currently use this feature
# - Requires architecture refactoring to break circular dependency
# DO NOT add to default features or enable unless circular dependency is resolved
spider = ["dep:riptide-spider", "strategy-traits"]

# Strategy traits for extensibility
strategy-traits = []

# JSON-LD optimization
jsonld-shortcircuit = []  # Phase 10: Early return for complete JSON-LD schemas

# Phase 1: WASM Optional - New feature flags
native-parser = []           # Use native Rust parser (default, fast, always available)
wasm-extractor = ["dep:wasmtime", "dep:wasmtime-wasi"]  # Enable WASM-based extraction (opt-in)

[[example]]
name = "basic_extraction"
required-features = ["css-extraction", "regex-extraction"]

[[bench]]
name = "token_counting_benchmark"
harness = false

