[package]
name = "riptide-facade"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
riptide-types = { path = "../riptide-types" }
riptide-pipeline = { path = "../riptide-pipeline" }
# Phase 2C.2: ✅ COMPLETED - Orchestrator traits extracted to riptide-types
# CrawlFacade now depends on PipelineExecutor/StrategiesPipelineExecutor traits
# instead of concrete implementations. Circular dependency ELIMINATED.
# riptide-api = { path = "../riptide-api" }  # REMOVED
riptide-fetch = { path = "../riptide-fetch" }
# Phase 1: WASM Optional - Use native-parser by default
riptide-extraction = { path = "../riptide-extraction", default-features = false, features = ["css-extraction", "regex-extraction", "dom-utils", "chunking", "native-parser"] }
riptide-pdf = { path = "../riptide-pdf" }
riptide-cache = { path = "../riptide-cache" }
riptide-browser = { path = "../riptide-browser" }
riptide-stealth = { path = "../riptide-stealth" }
riptide-monitoring = { path = "../riptide-monitoring", optional = true }
riptide-spider = { path = "../riptide-spider" }
riptide-search = { path = "../riptide-search" }
riptide-utils = { path = "../riptide-utils" }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Logging
tracing.workspace = true

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

# Async traits and streams
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true

# URL handling
url.workspace = true

# HTML parsing
scraper.workspace = true

# Browser automation
spider_chromiumoxide_cdp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
futures.workspace = true
scraper.workspace = true
spider_chromiumoxide_cdp = { workspace = true }

[features]
default = []
# Phase 1: WASM Optional - Feature flag for WASM extraction
wasm-extractor = ["riptide-extraction/wasm-extractor", "riptide-cache/wasm-extractor"]

[lib]
path = "src/lib.rs"
