[package]
name = "riptide-fetch"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP/network layer for RipTide web scraping framework"
keywords = ["http", "fetch", "network", "web"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Shared types
riptide-types = { path = "../riptide-types" }
riptide-config = { path = "../riptide-config" }

# Core dependencies
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
futures.workspace = true

# HTTP and network
reqwest.workspace = true
http.workspace = true
hyper.workspace = true
bytes.workspace = true
url.workspace = true

# Monitoring and metrics
tracing.workspace = true

# Caching
dashmap.workspace = true

# Utilities
regex.workspace = true
chrono.workspace = true

# Telemetry
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

# Additional
rand.workspace = true
robotstxt = "0.2"
xml = "0.8"
sysinfo.workspace = true
psutil.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
wiremock.workspace = true

[features]
default = []
