[package]
name = "riptide-headless-hybrid"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Hybrid headless browser launcher using spider-chrome with EventMesh stealth features"
authors = ["RipTide Team"]

[lib]
name = "riptide_headless_hybrid"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Spider chrome for browser automation
spider_chrome = { workspace = true }

# Spider's chromiumoxide fork (what spider_chrome actually uses internally)
spider_chromiumoxide_cdp = "0.7"

# EventMesh stealth features
riptide-stealth = { path = "../riptide-stealth" }
riptide-types = { path = "../riptide-types" }
riptide-engine = { path = "../riptide-engine" }

# For maintaining compatibility
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }

[features]
default = ["spider-chrome", "stealth"]
# Enable spider_chrome high-concurrency features
spider-chrome = []
# Enable all stealth features
stealth = []
