[package]
name = "riptide-headless"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "riptide-headless"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = "0.22"
chromiumoxide = { workspace = true }
futures = { workspace = true }
riptide-core = { path = "../riptide-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }