[package]
name = "riptide-headless"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "riptide_headless"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = "0.22"
spider_chrome = { workspace = true }
futures = { workspace = true }

# Internal crate dependencies
# P3-T4.4: Migration from riptide-engine to riptide-browser complete
riptide-browser = { path = "../riptide-browser" }
riptide-stealth = { path = "../riptide-stealth" }
# P2-F1 Day 3: Removed riptide-core dependency to break circular dependency
# riptide-headless-hybrid = { path = "../riptide-headless-hybrid", optional = true }  # Temporarily disabled for baseline
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
default = []
# WIP: Full headless browser automation (scaffolding not yet fully wired)
# headless-hybrid = ["riptide-headless-hybrid"]  # Temporarily disabled for baseline