[package]
name = "riptide-html"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTML processing and extraction capabilities for RipTide"
keywords = ["html", "extraction", "css", "regex", "dom"]
categories = ["text-processing", "web-programming"]

[dependencies]
# Core dependencies for traits and types
riptide-core = { path = "../riptide-core" }
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# HTML processing
scraper = "0.20"
lol_html.workspace = true
regex.workspace = true
url.workspace = true

# Chunking dependencies
tiktoken-rs = "0.5"

# Optional features
futures.workspace = true

# Table extraction dependencies
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true

[features]
default = ["css-extraction", "regex-extraction", "dom-utils", "chunking"]
css-extraction = []
regex-extraction = []
dom-utils = []
table-extraction = []
chunking = []
spider = []
strategy-traits = []

[[example]]
name = "basic_extraction"
required-features = ["css-extraction", "regex-extraction"]

