[package]
name = "riptide-intelligence"
version = "0.1.0"
edition = "2021"
authors = ["RipTide Team"]
description = "LLM abstraction layer for RipTide with safety guarantees"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"
tracing-subscriber = "0.3"

[features]
default = ["mock"]
mock = []