[package]
name = "riptide-intelligence"
version = "0.1.0"
edition = "2021"
authors = ["RipTide Team"]
description = "LLM abstraction layer for RipTide with safety guarantees"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
riptide-core = { path = "../riptide-core" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Specific versions for intelligence features
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"
tracing-subscriber = "0.3"

[features]
default = ["mock"]
mock = []