[package]
name = "riptide-intelligence"
version = "2.0.0"
edition = "2021"
authors = ["RipTide Team"]
description = "LLM abstraction layer for RipTide with safety guarantees"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
# P2-F1 Day 4-5: Migrated from riptide-core to riptide-reliability + riptide-types
riptide-reliability = { path = "../riptide-reliability" }
riptide-types = { path = "../riptide-types" }
riptide-events = { path = "../riptide-events" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Specific versions for intelligence features
dashmap = { workspace = true }
arc-swap = "1.6"
parking_lot = "0.12"

# HTTP client for provider implementations
reqwest = { workspace = true }

# Random for provider selection
rand = "0.8"

# Additional error handling
anyhow = { workspace = true }

# Configuration file formats
serde_yaml = "0.9"
toml = "0.8"

# File system watching
notify = "6.0"

# Additional dependencies for new features
sha2 = "0.10"
tiktoken-rs = "0.5"
dirs = "5.0"
# Workspace dependencies for HTTP client features
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["openai", "anthropic", "groq"]
openai = []
anthropic = []
groq = []
all-providers = ["openai", "anthropic", "groq"]
mock = []

[[example]]
name = "basic_usage"
required-features = ["mock"]

[[example]]
name = "multi_provider_usage"
required-features = ["mock"]
